read-message-status
